code/rate.css
@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&family=Overpass:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');

:root {
    --Orange: hsl(25, 97%, 53%);
    --White: hsl(0, 0%, 100%);
    --Light-Grey: hsl(217, 12%, 36%);
    --Medium-Grey: hsl(216, 12%, 54%);
    --Dark-Blue: hsl(213, 19%, 18%);
    --Very-Dark-Blue: hsl(216, 12%, 8%);

    font-family: 'Overpass';
}

body {
    background-color: var(--Very-Dark-Blue);
    min-height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

.rate-card {
    background-color: var(--Dark-Blue);
    max-width: 350px;
    min-width: 300px;
    padding: 5rem 2rem 1.5rem 2rem;
    margin: 20px;
    border-radius: 1rem;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    position: relative;
}

h1 {
    color: var(--White);
    align-self: flex-start;
    margin-bottom: 0;
    font-weight: 700;
}

p {
    white-space: pre-wrap;
    color: var(--Medium-Grey);
    margin: 10px 0 30px 0;
}

.rate {
    display: flex;
    width: 100%;
    justify-content: space-between;
    align-self: center;
}

input {
    appearance: none;
    display: none;
}

input:checked+label {
    background-color: var(--Orange);
    color: var(--White);
}


label {
    display: inline-flex;
    justify-content: center;
    align-items: center;
    width: 50px;
    height: 50px;
    border-radius: 50%;
    background-color: var(--Very-Dark-Blue);
    color: var(--Medium-Grey);
    transition: 0.3s;
}

label:hover {
    background-color: var(--Light-Grey);
    color: var(--White);
}

button {
    margin-top: 30px;
    background-color: var(--Orange);
    color: white;
    border: none;
    width: 100%;
    height: 2.5rem;
    border-radius: 2em;
    font-size: 15px;
    font-weight: 700;
    font-family: 'overpass';
    text-transform: uppercase;
    letter-spacing: 1.5px;
    transition: 0.2s;
    align-self: center;
}

.frame {
    position: absolute;
    top: 30px;
    left: 30px;
    background-color: var(--Light-Grey);
    width: 50px;
    height: 50px;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.frame img {
    transform: scale(1.3);
}

button:hover {
    background-color: var(--White);
    color: var(--Orange);
}

@media(max-width: 450px) {
    .rate {
        gap: 12px;
    }
}

/* feed back design*/

.feed-back {
    position: absolute;
    box-sizing: border-box;
    background-color: var(--Dark-Blue);
    height: 100%;
    width: 100%;
    padding: 2.5rem 2rem 1.3rem 2rem;
    border-radius: 1rem;
    top: 0;
    left: 0;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    text-align: center;
    z-index: -1;
}

#result {
    color: var(--Orange);
    transform: translateY(10px);
    background-color: var(--Light-Grey);
    padding: 0.5rem 01rem;
    border-radius: 1.5rem;
}

#thanks {
    text-align: center;
    align-self: center;
    transform: translateY(5px);
}

.top {
    z-index: 1;
}

